--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <iframe
     class="soundcloud-frame"
     width="100%"
-    height="450"
+    height="100%"
     scrolling="no"
     frameborder="no"
     allow="autoplay"
