--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <iframe
     class="soundcloud-frame"
     width="100%"
-    height="100%"
+    height="300"
     scrolling="no"
     frameborder="no"
     allow="autoplay"
@@ -30,7 +30,7 @@
 <!-- 🎨 Custom Styles -->
 <style>
   .soundcloud-widget {
-    background-color: #0d0d0d;   /* 🔲 Фон виджета */
+    background-color: #30302e;   /* 🔲 Фон виджета */
     color: #ff8800;              /* 🎨 Основной цвет текста */
     font-family: 'Inter', sans-serif;
     border-radius: 10px;         /* 🟠 Закругление краёв */
